fix overflow y in small screen

--- a/www/public/themes/nightly/assets/dev/style/raw/communities.sass
+++ b/www/public/themes/nightly/assets/dev/style/raw/communities.sass
@@ -35,10 +35,13 @@ footer
     @media screen and (max-width: $break-md)
       p
         left: 0
+        padding-right: 10px
       img
         position: static
         margin: 0 auto
         box-shadow: 0 0 20px 10px $nl-orange
+    @media screen and (max-width: $break-xs)
+      width: 70vw
 
   section.divisi:nth-child(odd)
     img
