--- a/www/public/themes/nightly/assets/dev/style/raw/main.sass
+++ b/www/public/themes/nightly/assets/dev/style/raw/main.sass
@@ -108,6 +108,9 @@ body > nav.navbar-nightly
   box-shadow: $standard-shadow
   background-image: $noise-texture
   margin-bottom: 0
+  .navbar-header
+    padding-left: 1rem
+    margin-right: 0
 
   .navbar-brand
     color: $nl-orange
@@ -148,6 +151,7 @@ main
 
 .container-fluid
   padding: 0
+  margin: 0
 
 footer
   background-color: $nl-red
